# AdvEngine

./: AGENTS.md  AUDIT_RESULTS.md  AUDIT_RESULTS.txt  FIXES.md  Features.md  IMPLEMENT.md  README.md  TOBEFIXED.md  TODO.md  agents.md  com.github.mclellac.AdvEngine.json  meson.build  screenshot.xwd
TestGame/: settings.json
TestGame/Data/: CharacterData.csv  ItemData.csv
TestGame/Logic/: DialogueGraphs.json  LogicGraphs.json  Scenes.json
adv_engine/: attribute_editor.py  character_editor.py  data_loader.py  data_models.py  item_editor.py  main.py  ue_exporter.py
adv_engine/src/: main.py
adv_engine/src/core/: data_schemas.py  project_manager.py  settings_manager.py  ue_exporter.py
adv_engine/src/ui/: attribute_editor.py  character_editor.py  item_editor.py  module_assets.py  module_audio.py  module_character.py  module_cutscene.py  module_dialogue.py  module_font.py  module_interaction.py  module_logic.py  module_quest.py  module_scene.py  module_state.py  module_ui_builder.py  preferences.py  shortcuts.py  verb_editor.py
data/: com.github.mclellac.AdvEngine.desktop.in  com.github.mclellac.AdvEngine.gschema.xml  com.github.mclellac.AdvEngine.metainfo.xml.in  com.github.mclellac.AdvEngine.service.in  meson.build
data/icons/: meson.build
docs/: guide.md  tutorial.md
docs/design/: 01_application_architecture.md  02_coding_standards.md  03_logic_editor_design.md
docs/guide/: 03_managing_game_data.md  core_concepts.md  getting-started.md  interface-overview.md  introduction.md
docs/reference/: asset-manager.md  audio-editor.md  cutscene-editor.md  database-editors.md  dialogue-editor.md  interaction-editor.md  logic-editor.md  preferences.md  quest-editor.md  scene-editor.md
docs/tutorials/: 01_locked_room.md
po/: POTFILES.in  meson.build
src/: advengine.gresource.xml  advengine.in  main.py  meson.build
src/core/: data_schemas.py  project_manager.py  settings_manager.py  ue_exporter.py
src/core/schemas/: __init__.py  asset.py  attribute.py  character.py  font.py  global_state.py  gobject_factory.py  interaction.py  item.py  logic.py  project_data.py  quest.py  scene.py  search.py  ui.py  utility.py  verb.py
src/ui/: attribute_editor.py  attribute_editor.ui  item_editor.py  item_editor.ui  logic_editor.ui  main_window.ui  module_assets.py  module_assets.ui  module_audio.py  module_character.py  module_character.ui  module_cutscene.py  module_database.py  module_database.ui  module_dialogue.py  module_dialogue.ui  module_font.py  module_interaction.py  module_interaction.ui  module_log.py  module_logic.py  module_logic.ui  module_quest.py  module_quest.ui  module_scene.py  module_scene.ui  module_state.py  module_state.ui  module_ui_builder.py  new_project_dialog.py  new_project_dialog.ui  preferences.py  search_results.py  shortcuts.py  verb_editor.py  verb_editor.ui  welcome.py  welcome.ui
src/ui/shared/: __init__.py  dynamic_node_editor.py  minimap.py
templates/Blank/Data/: CharacterData.csv  ItemData.csv  Verbs.json
(+31 files in other folders)
